# crewai-flows-crash-course

1_basic_flow/: basic_flow.py
5_flows_with_crews/demo_flow/src/demo_flow/: main.py  poem.txt
5_flows_with_crews/demo_flow/src/demo_flow/crews/poem_crew/: poem_crew.py
6_write_a_book_with_flows/write_a_book_with_flows/src/write_a_book_with_flows/: main.py
Lesson5/demo_flow/src/demo_flow/: poem.txt
Lesson5_copy/demo_flow/: pyproject.toml
Lesson5_copy/demo_flow/src/demo_flow/: main.py  poem.txt
Lesson_6_backup/: pyproject.toml  replit.nix
Lesson_6_backup/write_a_book_with_flows/: pyproject.toml
Lesson_6_backup/write_a_book_with_flows/src/write_a_book_with_flows/: Synthesized_Insights:_A_Comprehensive_Analysis_of_Source_Materials.md  llm.py  main.py  memory_manager.py
Lesson_6_backup/write_a_book_with_flows/src/write_a_book_with_flows/crews/outline_book_crew/: outline_crew.py
Lesson_6_backup/write_a_book_with_flows/src/write_a_book_with_flows/crews/outline_book_crew/config/: agents.yaml  tasks.yaml
Lesson_6_backup/write_a_book_with_flows/src/write_a_book_with_flows/crews/write_book_chapter_crew/: write_book_chapter_crew.py
Lesson_6_backup/write_a_book_with_flows/src/write_a_book_with_flows/crews/write_book_chapter_crew/config/: agents.yaml  tasks.yaml
Lesson_6_backup/write_a_book_with_flows/src/write_a_book_with_flows/db/: chroma.sqlite3
Lesson_6_backup/write_a_book_with_flows/src/write_a_book_with_flows/tools/: pdf_content_tool.py
Lesson_6_backup/write_a_book_with_flows/tests/: test_memory_manager.py
(+5 files in other folders)
