[tool.poetry]
name = "crewai-flows-crash-course"
version = "0.1.0"
description = "A CrewAI flows project"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
crewai = "^0.19.0"
crewai-tools = "^0.0.14"
graphviz = "^0.20.1"
networkx = "^3.2.1"
matplotlib = "^3.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
