[project]
name = "write_a_book_with_flows"
version = "0.1.0"
description = "write_a_book_with_flows using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "asyncio>=3.4.3",
    "crewai[tools]>=0.76.9,<1.0.0",
    "langchain-community>=0.0.16",
    "langchain>=0.1.0",
    "sentence-transformers>=2.5.1",
    "chromadb>=0.4.0",
    "langchain-chroma>=0.0.1",
]

[project.scripts]
kickoff = "write_a_book_with_flows.main:kickoff"
plot = "write_a_book_with_flows.main:plot"
run_crew = "write_a_book_with_flows.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poetry.dependencies]
python = "^3.8"
crewai = "*"
pydantic = "*"